--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "expo-sqlite": "~11.1.1"
+    "expo-sqlite": "~11.1.1",
+    "expo-file-system": "~15.2.2",
+    "expo-document-picker": "~11.2.2",
+    "expo-sharing": "~11.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
